Fix width and vertical alignment for blue info dots

--- a/css/media.css
+++ b/css/media.css
@@ -185,7 +185,11 @@
   }
 
   .info__dots-container {
-    max-width: 80%;
+    width: 80%;
+  }
+
+  .blue-info--dot {
+    top: 1rem;
   }
 
   /**** Footer Medium/Small Section ****/
